Cambios a los estilos y routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+
+<shared-menu></shared-menu>
 <router-outlet></router-outlet>
+<!-- 
+<div class="card flex justify-content-center">
+    <p-button label="Phos" icon="pi pi-check" iconPos="left">
+    </p-button>
+</div> -->
