--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    margin: 0;
+    padding: 2rem;
+    min-width: 320px;
+    min-height: 100vh;
+    background-color: var(--surface-card);
+}
+
+h1 {
+    margin-top: 0;
+}
+
+
+button {
+    border-radius: 0.5rem;
+}
+
+span {
+    margin-left: 5px;
+    margin-top: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    // font-size: 15px;
+    text-decoration: none;
+
+}
+
+// p {
+//     color: #FFFF;
+// }
